# CryptoTrade

./: .env  .env.example  .gitignore  00_START_HERE.md  API_ENDPOINTS.txt  API_RESPONSE_FORMAT.md  ARCHITECTURE.md  ARCHIVE_LOG.md  CHANGES_SUMMARY.md  CLOUDFLARE_SETUP.md  CRITICAL_FIXES_SUMMARY.md  CRITICAL_ISSUES_FIXED.txt  DATA_PIPELINE_USAGE.md  DELIVERY_CHECKLIST.md  DIAGNOSTICS.bat  DOCUMENTATION_INDEX.md  FINAL_FIXES_SUMMARY.md  FINAL_STATUS_REPORT.md  FIXES.md  FIXES_COMPLETION_REPORT.txt  GPU_OPTIMIZATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE_REAL_BACKTESTING.py  IMPLEMENTATION_STATUS.txt  IMPLEMENTATION_SUMMARY.md  INDEX.md  INDEX_HTML_UPDATES.txt  INFERENCE_COMPLETE.md  INFERENCE_INTEGRATION.md  INFERENCE_QUICK_REFERENCE.md  INTEGRATED_FILE_STRUCTURE.md  LABEL_MAPPING_FIX.md  ML_IMPLEMENTATION_COMPLETE.py  PATCHES_APPLIED.md  PATCHES_REFERENCE.md  PATCHES_SUMMARY.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_ML_PRODUCTION_PIPELINE.md  PRODUCTION_SUMMARY.md  PYLANCE_FIX_COMPLETE.md  (+55 more)
api/: __init__.py  dashboard_server.py
config/: analyzer_config.json  coins.json  config_loader.py  settings.py  train_config.json
core/: __init__.py  audit_logger.py  enhanced_crypto_dashboard.py  exchange_adapter.py  historical_data_analyzer.py  live_tracker.py  outcome_tracker.py  signal_generator.py  train_ml_model.py
docs/: API_KEY_SECURITY.md  BACKFILL.md  TRADING.md
models/: __init__.py  portfolio.py  signals.py
reports/: gaps_20251222_013439.csv  ml_integration_report_20251222_002530.txt  ml_signals_20251222_002530.csv  verify_download_20251222_004350.txt  verify_download_20251222_055336.txt  verify_download_20251222_060157.txt  verify_download_20251222_060814.txt  verify_download_20251222_061111.txt
scripts/: IMPLEMENTATION_GUIDE_REAL_BACKTESTING.py  accuracy_validator.py  backfill_gaps.py  check_columns.py  demo_paper_trade.py  demo_testnet_trading.py  download_historical_data.py  extract_ml_features.py  final_verification.py  generate_gap_csv.py  generate_real_config.py  health_monitor.py  monitor_and_generate_report.py  optimize_patterns.py  optimize_thresholds.py  system_diagnostic.py  tmp_gap_to_fill.csv  train_ml_model.py  validate_integration.py  verify_data_quality.py  verify_database.py  verify_live_tracker.py  verify_real_config.py  verify_setup.py  wait_for_download_and_verify.py
server/: __init__.py  binance_ws.py  web_server.py
src/: __init__.py
templates/: dashboard.html  index.html
tests/: Coin_present_binance.py  __init__.py  test_api.py  test_discord.py  test_endpoints.py  test_exchange_adapter.py  test_integration.py  test_paper_trader.py  test_production_setup.py  test_risk_manager.py
update/: accuracy_validator.py  (+2 more)
(+109 files in other folders)
